scolar-core/language-component-tool/src/test/resources/cocos/languageComponents/invalid/NoPpEPOrWfrSet.comp
package cocos.languageComponents.invalid;

language component NoPpEPOrWfrSet {
  grammar mc.lang.MontiArc;
}